# opsaudit

./: AGENTS.md  CHANGELOG.md  README.md  README.tr.md  SECURITY.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
assets/: demo.html
opsaudit/: __init__.py  cli.py  core.py
opsaudit/commands/: abc.py  forecast.py  otif.py  pareto.py
tests/: gen_fixtures.py  test_cli.py
tests/data/: demand.csv  downtime.csv  orders.csv
